--- a/16-multiple_regression.Rmd
+++ b/16-multiple_regression.Rmd
@@ -487,6 +487,8 @@ surface_plot
 ```
 
 
-All of the predicted scores fall on the regression surface. You can think of the regression surface as a best-fit plane. Each dot represents a person. The graph is interactive - you can rotate it to see a better view of the surface. The graph illustrates that predicted video game scores (i.e., the surface) change as a function of both age and iq.
+All of the predicted scores fall on the regression surface. You can think of the regression surface as a best-fit plane. In some sense you can think of the plane as a collection of best-fit lines. For all the best-fit lines on the plane the slopes are the same - just the intercepts differ. You can see the people relative to the predicted surface/plane by looking at the dots. Each dot represents a person. 
+
+The graph is interactive - you can rotate it to see a better view of the surface. The graph illustrates that predicted video game scores (i.e., the surface) change as a function of both age and iq.
 
 
