--- a/16-multiple_regression.Rmd
+++ b/16-multiple_regression.Rmd
@@ -496,7 +496,7 @@ All of the predicted scores fall on the regression surface. You can think of the
 
 The graph is interactive - you can rotate it to see a better view of the surface. The graph illustrates that predicted video game scores (i.e., the surface) change as a function of both age and iq.
 
-Try the interactive version of the graph below. Caveat, sometimes it doesn't appear correctly on the web.
+Try the interactive version of the graph below. Caveat, sometimes it doesn't appear correctly on the web. If the graph appears incorrectly (e.g., no data points or no surface) try using the Chrome browser. Safari sometimes has problems with this web object.
 
 ```{r}
 surface_plot
