--- a/16-multiple_regression.Rmd
+++ b/16-multiple_regression.Rmd
@@ -288,13 +288,13 @@ Thus, we find: $\widehat{Y_{iq}} = 124.763 - 0.506(age)$
 
 Consequently, when you see $\widehat{Y_{iq}}$ recognize that it is really just an estimate of IQ **created entirely from age**. In contrast, $Y_{iq}$ is the actual IQ score we obtained from participants.
 
-We want IQ with the effect of age removed. Therefore, we want IQ (i.e., $Y_{iq}$) with the effect of age (i.e.,$widehat{Y_{iq}}$ ) removed.
+We want IQ with the effect of age removed. Therefore, we want IQ (i.e., $Y_{iq}$) with the effect of age (i.e.,$\widehat{Y_{iq}}$ ) removed.
 
-Thus we want: residual = $Y_{iq}$ - $widehat{Y_{iq}}$
+Thus we want: residual = $Y_{iq}$ - $\widehat{Y_{iq}}$
 
 or another way of thinking of it is:
 
-iq_without_age = $Y_{iq}$ - $widehat{Y_{iq}}$
+iq_without_age = $Y_{iq}$ - $\widehat{Y_{iq}}$
 
 iq_without_age = iq - (124.763 - 0.506(age) )
 
