--- a/16-multiple_regression.Rmd
+++ b/16-multiple_regression.Rmd
@@ -29,13 +29,23 @@ After the remotes package is installed, it can be used to install a package from
 remotes::install_github("dstanley4/fastInteraction")
 ```
 
+## Overview
+
+Multiple regression is a means relating multiple predictor variables to a single criterion variable. We can determine the amount of variance in the criterion accounted for by the set of predictors ($R^2$), a single predictor on it's own ($r^2$), or the extent to which a single predictor accounts for unique variance account for in the criterion that is not accounted for by any of the other predictors ($sr^2$).
+
 ## Example
 
-In this chapter, we extend the scenario from the bivariate regression chapter but we add an additional predictor. Specifically, we want to examine the extent to video game scores are predicted by age and IQ for people who live in the City of Guelph. As before, we treat citizens of Guelph as our population -- though in this chapter we move straight to the sample data (without showing the population-level data).
+In this chapter, we examine the extent to video game scores are predicted by age and IQ for people who live in the City of Guelph. As before, we treat citizens of Guelph as our population -- though in this chapter we move straight to the sample data (without showing the population-level data).
 
 We are interested in using both IQ and age to predict video game scores so we refer to these variables as **predictor** variables. The value being predicted is video game score and we refer to that variable as the **criterion** (i.e., the dependent variable). 
 
 You can think of the multiple regression problem using a venn diagram:
+
+```{r. echo = FALSE}
+knitr::include_graphics("ch_multiple_regression/images/mr_venn.png")
+```
+
+
 
 
 ## Load the data
