--- a/16-multiple_regression.Rmd
+++ b/16-multiple_regression.Rmd
@@ -58,9 +58,12 @@ library(janitor)
 
 my_data <- read_csv("data_mr_ex.csv")
 
+# ensure column names match desired naming convention
 my_data <- my_data %>%
   clean_names()
 ```
+
+We see the structure of the data with the glimpse() command:
 
 ```{r}
 glimpse(my_data)
@@ -69,7 +72,7 @@ glimpse(my_data)
 
 ## Bivariate relations
 
-When you conduct multiple regression analyses you should always report a correlation matrix with all of your predictors and criterion.
+When you conduct multiple regression analyses you should always report a correlation matrix with your predictors and criterion.
 
 ```{r}
 library(apaTables)
@@ -78,7 +81,7 @@ apa.cor.table(my_data)
 
 ```
 
-You should always check for curvilinear relations when reporting correlations. We do so with the code below. In this case we don't see any curvilinear relations.
+You should always check for curvilinear relations when reporting correlations via a graph. We quickly create a graph for doing so with the code below. In this case we don't see any curvilinear relations.
 
 ```{r}
 library(GGally)
@@ -88,7 +91,7 @@ ggpairs(my_data)
 
 
 
-You can think of the bivariate correlation as the shaded areas on the figure below. In this type of figure the degree of overlap between two circles is determined by the correlation squared.
+You can think of each bivariate correlation as the shaded areas on the figure below. In this type of figure the degree of overlap between two circles is determined by the correlation squared (i.r., $r^2$). The value you obtain for $r^2$ indicates the proportion of the criterion that is covered by the predictor. For example, if $r$ = .50 then $r^2$ = .25 which indicates 25% of the criterion should be covered by the circle representing that predictor.
 
 
 ```{r, echo = FALSE, out.width="100%"}
@@ -98,20 +101,17 @@ knitr::include_graphics("ch_multiple_regression/images/mr_venn_r.png")
 
 ## Single best predictor
 
-What is the best predictor of video_game? Just look at the correlation matrix above - no need for regression (or beta-weights). To use beta-weights to answer this question would be an error. Beta-weights only provide information about contribution to prediction in the context of a specific set of other predictors.
-
-In our current example, video_game_score is predicted by iq (*r* = .50) and age (*r* = -.30). The best predictor of video_game_score is iq because it has the strongest correlation (using absolute values .50 is larger than .30).
-
+What is the best predictor of video_game? Many researchers incorrectly believe you need multiple regression to answer this question - you do not. To determine the single best predictor in a set of predictors just look at the correlation matrix above - no need for regression (or beta-weights). The strongest correlation is the best predictor. In our current example, video_game_score is predicted by iq (*r* = .50) and age (*r* = -.30). The best predictor of video_game_score is iq because it has the strongest correlation (using absolute values .50 is larger than .30). 
 
 ## Multiple regression
 
-Multiple regression is most often use to ask two question:
+Multiple regression is frequently used to ask two questions:
 
-* how well we can predict the criterion using a set of predictors (see $R^2$)
+* How well we can predict the criterion using a set of predictors (see $R^2$)?
 
-* what is the unique contribution of a single variable in a set or predictors. In other words, does one variable predict a criterion above and beyond another variable. For example, does study time predict exam grades above and beyond iq? Or phrased differently: Does study time predict unique variance in exam grades that is not accounted for by iq? (see $sr^2$ or $\beta$-weights).
+* What is the unique contribution of a single variable in a set or predictors? In other words, how much does one variable predict the criterion above and beyond another variable? For example, does study time predict exam grades above and beyond iq? Or phrased differently: Does study time predict unique variance in exam grades that is not accounted for by iq? (see $sr^2$).
 
-We want to use age and IQ to predict video game score ($Y$). More specifically, we want to combine age and IQ to create a new variable ($\widehat{Y}$) that correlates as highly as possible with video game score. 
+We want to use age and IQ to predict video game score ($Y$). More specifically, we want to combine age and IQ to create a new variable ($\widehat{Y}$) that correlates as highly as possible with video game score. We do with the code below:
 
 ```{r,echo=TRUE,eval=TRUE}
 lm_object <- lm(video_game ~ age + iq,
@@ -124,14 +124,12 @@ Now look at the brief output:
 print(lm_object)
 ```
 
-This output shows you how we combined age, IQ, and a constant to create ($\widehat{Y}$).
+This output shows you how we can combine age, IQ, and a constant to create ($\widehat{Y}$). 
 
 More specifically:
 $\widehat{Y} = 102.233 - 0.0371(age) + 0.328(iq)$
 
-The slopes for age and iq are -0.0371 and 0.328, respectively. These are also referred to as the *b*-weights or unstandardized regression coefficients.
-
-$\widehat{Y}$ is the new variable we created from age and IQ. How well does it predict video game score? Said another way, overall how well can age and IQ predict video game scores? 
+The slopes for age and iq are -0.0371 and 0.328, respectively. These are also referred to as the *b*-weights or unstandardized regression coefficients. The computer picks these weight so that predicted video game scores ($\widehat{Y}$) will corresponds as closely as possible to actual video game scores.
 
 A quick way to get more comprehensive regression output is to use the *apa.reg.table* function in the apaTables package.
 
@@ -148,7 +146,7 @@ knitr::include_graphics("ch_multiple_regression/images/mr_table.png")
 
 ## *b*-weights
 
-An inspection of the *b* column in the above table reveals the *b*-weights. The *b*-weights are also known as the slopes or the unstandardized regression weights. The *b*-weights are used to create predicted/estimated video game score via the regression equation:
+An inspection of the *b* column in the above table reveals the *b*-weights we previously discussed. The *b*-weights are also known as the slopes or the unstandardized regression weights. The *b*-weights are used to create predicted/estimated video game score via the regression equation:
 
 $$
 \begin{align}
@@ -159,7 +157,7 @@ $$
 
 You can think of the regression equation as a receipe for making $\hat{Y}$. The variables in the regression (e.g., age and iq) are the ingredients. The *b*-weights (e.g., 0.3285 and 00.3712) are the amount of each ingredient you need to make $\hat{Y}$.
 
-The computer picks the *b*-weights using a process that ensures the predicted video game scores ($\hat{Y}$) corresponds as closely as possible to actual video game scores ($Y$). Consider the regression calculation for Person 1, below, who is 41.7 years old and has an IQ of 107.6.
+As previously noted, the computer picks the *b*-weights using a process that ensures the predicted video game scores ($\hat{Y}$) corresponds as closely as possible to actual video game scores ($Y$). Consider the regression calculation for Person 1, below, who is 41.7 years old and has an IQ of 107.6.
 
 $$
 \begin{align}
@@ -178,18 +176,18 @@ The above calculation reveals an estimated video game score for Person 1 of 122.
 knitr::include_graphics("ch_multiple_regression/images/mr_reg_data_figure.png")
 ```
 
-You can interpret the *b*-weights as indicating how much the criterion changes when a predictor changes -- **holding the other predictors constant**. In this context, a 0.3285 *b*-weight for IQ indicates that for each one-unit increase in IQ video game score will increase 0.3285 points -- holding the effect of age constant. Don't forget the b-weight can only be interpreting in context of that specific regression equation. If you replaced the age predictor with, say, height as a predictor, then the *b*-weight for IQ would change. Context matters when interpreting *b*-weights.
+You can interpret the *b*-weights as indicating how much the criterion changes when a predictor changes -- **holding the other predictors constant**. In this context, a 0.3285 *b*-weight for IQ indicates that for each one-unit increase in IQ video game score will increase 0.3285 points -- holding the effect of age constant. Don't forget the *b*-weight can only be interpreting in context of that specific regression equation. If you replaced the age predictor with, say, height as a predictor, then the *b*-weight for IQ would change. Context matters when interpreting *b*-weights.
 
 
 ## $R^2$
 
-How effective is the set of predictors? We can calculate $R^2$ to determine the proportion of variance the criterion that is accounted for by the predictors. This value is illustrated graphically below:
+How effective is the set of predictors? We can calculate $R^2$ to determine the proportion of variance the criterion that is accounted for by the set of predictors. This value is illustrated graphically below:
 
 ```{r, echo = FALSE, out.width="26%"}
 knitr::include_graphics("ch_multiple_regression/images/mr_venn_R2.png")
 ```
 
-How well did age and iq predict video_game? One way to do this is to compare the predicted scores on the criterion ($\widehat{Y}$) with actual scores on the criterion ($Y$). There are two methods of doing so that produce the same result.
+You will simply obtain $R^2$ from computer output. But how is $R^2$ calculated? Understanding how $R^2$ is calculated can help you to understand how to interpret it. There are two methods for doing so - that produce the same number:
 
 ### Method 1: Ratio Approach
 
@@ -206,6 +204,9 @@ The code below uses the above equation to calculate predicted video game score f
 
 ```{r, echo=TRUE, eval=TRUE}
 predicted_video_game_scores  <- predict(lm_object)
+
+actual_video_game_scores <- my_data$video_game
+
 ```
 
 Recall the formula for $R^2$:
@@ -220,7 +221,7 @@ We implement this formula using the code below:
 
 ```{r}
 var_predicted_video_game_scores <- var(predicted_video_game_scores ) 
-var_actual_video_game_scores   <-  var(my_data$video_game)
+var_actual_video_game_scores   <-  var(actual_video_game_scores)
 
 R2 <- var_predicted_video_game_scores / var_actual_video_game_scores
 
@@ -233,7 +234,7 @@ Thus, 29% of the variability in video game scores is predicted by the combinatio
 
 ### Method 2: Correlation Approach
 
-An alternative way of thinking about $R^2$ is as the correlation between predicted criterion scores and actual criterion scores:
+An alternative way of thinking about $R^2$ is as the squared correlation between predicted criterion scores and actual criterion scores:
 
 $$
 \begin{align}
@@ -245,8 +246,7 @@ $$
 We implement this formula with the code below and obtain the same value:
 
 ```{r,echo=TRUE,eval=TRUE}
-R <- cor(predicted_video_game_scores , my_data$video_game)
-print(R)
+R <- cor(predicted_video_game_scores, actual_video_game_scores)
 
 R2 <- R * R
 print(R2)
@@ -274,7 +274,7 @@ At the bottom of this output we see that the *p*-value is 1.912e-15 or 0.0000000
 
 A semi-partial correlation is represented by the symbol $sr$ and correspondingly a squared semi-partial correlation is represented by the symbol $sr^2$. What is a squared semi-partial correlation and why is it useful?
 
-Semi-partial correlations are way of determining the unique contribution of a variable. The semi-partial correlation is the correlation of one predictor (with all the other predictors removed) with the criterion. The semi-partial correlation squared is the amount $R^2$ would drop by if that variable was removed from the regression. It is the percentage of variability in criterion scores that is uniquely accounted for by a predictor. This is illustrated in the venn diagram below:
+Semi-partial correlations are a way of determining the unique contribution of a variable to predicting the criterion (in the context of the other predictors). The semi-partial correlation is the correlation of one predictor (with all the other predictors removed) with the criterion. The semi-partial correlation squared is the amount $R^2$ would drop by if that variable was removed from the regression. It is the percentage of variability in criterion scores that is uniquely accounted for by a predictor. This is illustrated in the venn diagram below:
 
 
 ```{r, echo = FALSE, out.width="63%"}
@@ -284,9 +284,9 @@ knitr::include_graphics("ch_multiple_regression/images/mr_venn_sr.png")
 
 ### $sr^2$ in theory
 
-In the text below we go "inside the black box" to show you how semi-partial correlations are computed. In practice, they are just displayed in R output - but understanding the text below where we do calculate them "old school" will help with you interpret $sr^2$.
+In the text below we go "inside the black box" to show you how semi-partial correlations are computed. In practice, they are just displayed in R output - but understanding the text below where we calculate them "old school" will help with you interpret $sr^2$.
 
-Overall, squared semi-partial correlations provide an index of how much that predictor contributes to the overall $R^2$ (with the effect of the other predictors removed). We calculate $sr^2$ for IQ (removing the effect of age) to demonstrate this fact. We do this with a regression equation in which we make IQ the criterion ($Y$). Then we predict IQ with age. The results is my_iq_regression which has inside of it $\widehat{Y}$, which in this case represents a best guess of IQ based on age. 
+Overall, squared semi-partial correlations provide an index of how much that predictor contributes to the overall $R^2$ (with the effect of the other predictors removed). We calculate $sr^2$ for IQ (removing the effect of age) to demonstrate this fact. We do this with a regression equation in which **we make IQ the criterion ($Y$)**. Then we predict IQ with age. This produces my_iq_regression which has inside of it a predictor version of IQ, $\widehat{Y_{iq}}$, which in this case represents a best guess of IQ based on age. 
 
 ```{r,echo=TRUE,eval=TRUE}
 my_iq_regression <- lm(iq ~ age, data = my_data)
@@ -314,7 +314,7 @@ We do this below:
 iq_without_age <- resid(my_iq_regression) 
 ```
 
-Then we correlate IQ without age (i.e., iq_without_age) with video game scores (i.e., video_game). This tells us how IQ correlates with video game scores when the effects of age have been removed from IQ; that is, the semi-partial correlation (i.e., $sr$).
+Then we correlate IQ without age (i.e., iq_without_age) with video game scores (i.e., video_game). This tells us how IQ correlates with video game scores when the effects of age have been removed from IQ; that is, the semi-partial correlation (i.e., $sr$). Once again refer to the venn diagram above illustrating $sr^2$.
 
 ```{r,echo=TRUE,eval=TRUE}
 # apa.reg.table does this for you - this is for learning/illustration only.
@@ -343,13 +343,13 @@ However, to obtain the *p*-value for each $sr^2$ value we need to use the summar
 summary(lm_object)
 ```
 
-The *p*-value for the *b*-weight is the *p*-value for $sr^2$, Therefore, we simply look in the Pr(>|t|) column to obtain the required *p*-value. Adding this value to our reporting, we find:
+The *p*-value for the *b*-weight (i.e. Estimate) is the *p*-value for $sr^2$, Therefore, we simply look in the Pr(>|t|) column to obtain the required *p*-value. Adding this value to our reporting, we find:
 
 * age: $sr^2$ = .04 , 95% CI [-.01, .09], *p* < .001
 
 * iq: $sr^2$ = .20, 95% CI [.11, .30], *p* < .001
 
-If a predictor is significant this indicates that the predictor contributes unique variance to $\widehat{Y}$ that can not be contributed by any of the other predictors. The amount of unique variance contributed by a predictor is indicated by $sr^2$ (semi-partial correlation squared).
+If a predictor is significant, this indicates that the predictor contributes unique variance to $\widehat{Y_{video game}}$ that can not be contributed by any of the other predictors. The amount of unique variance contributed by a predictor is indicated by $sr^2$ (semi-partial correlation squared).
 
 
 ### Blocks regression
@@ -452,11 +452,11 @@ We can obtain the regression weights for analysis using these standardized score
 summary(lm_object_zscores) 
 ```
 
-Notice that the estimates above are 4.582e-01 -2.070e-01 which are, in decimal form, .46 and -.21, respectively. These are the beta weights from the apa.reg.table on the previous page. Thus, when you conduct a normal regression **but used standardized variables in it** you obtain beta-weights.
+Notice that the estimates above are 4.582e-01 -2.070e-01 which are, in decimal form, .46 and -.21, respectively. These are the beta-weights from the apa.reg.table on the previous page. Thus, when you conduct a normal regression **but used standardized variables in it** you obtain beta-weights.
 
-*Interpretation*. The typically reported **b-weights** describe how a 1 unit change in the IQ influences video_game points. Similarly, **beta-weights**, describe how a 1 unit change in z_iq influences z_video_game. Keep in mind, however, that 1 unit of z_iq (and z_video_game) is 1 standard deviation. As a result, a beta-weight indicates how much the criterion scores will change in SD units when a predictor increases by 1 SD -- holding the effect of the other predictors constant. Similar to b-weights, beta-weights can only be interpreted in the context of the other variables in the equation.
+*Interpretation*. The typically reported **b-weights** describe how a 1 unit change in IQ influences video_game points. Similarly, **beta-weights**, describe how a 1 unit change in z_iq influences z_video_game. Keep in mind, however, that 1 unit of z_iq (and z_video_game) is 1 standard deviation. As a result, a beta-weight indicates how much the criterion scores will change in SD units when a predictor increases by 1 SD -- holding the effect of the other predictors constant. Similar to b-weights, beta-weights can only be interpreted in the context of the other variables in the equation.
 
-Hopefully, this description has made it clear that although beta weights are often referred to as *standardized regression weights*; it would be more accurate to describe them as the **weights for standardized variables**.
+Hopefully, this description has made it clear that although beta-weights are often referred to as *standardized regression weights*; it would be more accurate to describe them as the **weights for standardized variables**.
 
 ## Graphing
 
@@ -467,7 +467,7 @@ knitr::include_graphics("ch_multiple_regression/images/mr_reg_data_figure.png")
 ```
 
 
-You can see that each person has three measured variables associated with them: video_game_score, iq, and age. These columns are in blue to indicate the fact they are measured variables. Because we have three measured variables we can't create a typical 2D scatter plot. That type of plot only work when there is one predictor and one criterion. Now we have two predictors and one criterions. Consequently, we need make a 3D scatter plot.
+You can see that each person has three measured variables associated with them: video_game_score, iq, and age. These columns are in blue to indicate the fact they are measured variables. Because we have three measured variables we can't create a typical 2D scatter plot. That type of plot only work when there is one predictor and one criterion. Now we have two predictors and one criterion. Consequently, we need make a 3D scatter plot.
 
 Correspondingly, because we have two predictors, we can't obtain a regression line (i.e., best-fit line). A regression line is only possible when there is one predictor. Now we have two predictors. Consequently, a regression surface is required to show the predicted values for combinations of age and iq. In this case, when there are two predictor variables, the regression surface is a plane.
 
@@ -502,11 +502,9 @@ You can see the graph below:
 knitr::include_graphics("ch_multiple_regression/images/mr_3d_snapshot.png")
 ```
 
-All of the predicted scores fall on the regression surface. You can think of the regression surface as a best-fit plane. In some sense you can think of the plane as a collection of best-fit lines. For all the best-fit lines on the plane the slopes are the same - just the intercepts differ. You can see the people relative to the predicted surface/plane by looking at the dots. Each dot represents a person. 
+All of the predicted scores fall on the regression surface. You can think of the regression surface as a best-fit plane. In some sense you can think of the plane as a collection of best-fit lines. Indeed, two illustrative best-fit lines are place on this surface. For all the best-fit lines on the plane the slopes are the same - just the intercepts differ. You can see the people relative to the predicted surface/plane by looking at the dots. Each dot represents a person. 
 
-The graph is interactive - you can rotate it to see a better view of the surface. The graph illustrates that predicted video game scores (i.e., the surface) change as a function of both age and iq.
-
-Try the interactive version of the graph below. Caveat, sometimes it doesn't appear correctly on the web. If the graph appears incorrectly (e.g., no data points or no surface) try using the Chrome browser. Safari sometimes has problems with this web object.
+Try the interactive version of the graph below. Caveat, sometimes it doesn't appear correctly on the web. If the graph appears incorrectly (e.g., no data points or no surface) try using the Chrome browser. Safari sometimes has problems with this web object. You can rotate the graph to see a better view of the surface. The graph illustrates that predicted video game scores (i.e., the surface) change as a function of both age and iq.
 
 ```{r}
 surface_plot
